--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,33 +1,8 @@
 spring:
+    profiles:
+        active: local
     application:
         name: matchingplatform
-    datasource:
-        url: ${SPRING_DATASOURCE_URL}
-        username: ${SPRING_DATASOURCE_USERNAME}
-        password: ${SPRING_DATASOURCE_PASSWORD}
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        hikari:
-            connection-timeout: 60000
-            initialization-fail-timeout: -1
-    data:
-        redis:
-            host: ${SPRING_REDIS_HOST}
-            port: ${SPRING_REDIS_PORT}
-    jpa:
-        hibernate:
-            ddl-auto: create
-        properties:
-            hibernate:
-                dialect: org.hibernate.dialect.MySQLDialect
-                '[show_sql]': true
-                '[format_sql]': true
-                '[highlight_sql]': true
-                '[default_batch_fetch_size]': 100
-                '[use_sql_comments]': true
-            logging:
-            level:
-                '[org.hibernate.SQL]': debug
-                '[org.hibernate.type]': trace
 
 logging:
     level:
